--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>webpack-simple-vue</title>
   </head>
   <body>
+    <h2>asdas;qwqweqwdjas;dj</h2>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
   </body>
